// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filterbar matches snapshot when filters are present 1`] = `
<div
  className="filterBar "
>
  <button
    className="button is-small"
    onClick={[Function]}
  >
    Add a Filter 
  </button>
  <button
    className="button is-small"
    onClick={[Function]}
  >
    Remove a Filter
  </button>
  <Filter
    addFilter={[Function]}
    i={0}
    key="0"
    size="is-small"
  />
  <Filter
    addFilter={[Function]}
    i={1}
    key="1"
    size="is-small"
  />
  <button
    className="button is-small"
    onClick={[Function]}
  >
     Apply 
    filters
  </button>
  <button
    className="button is-small"
    onClick={[Function]}
  >
     Clear 
    filters
     
  </button>
</div>
`;

exports[`Filterbar matches snapshot when no filters are present 1`] = `
<div
  className="filterBar "
>
  <button
    className="button is-small"
    onClick={[Function]}
  >
    Add a Filter 
  </button>
</div>
`;
